# architecture_tools

./: CMakeLists.txt  README.md  package.xml
ament_archlint/: CHANGELOG.rst  README.md  package.xml  setup.py
ament_archlint/ament_archlint/: main.py  pytest_marker.py  validate.py
ament_archlint/test/: test_skill_validation.py
ament_cmake_archlint/: CHANGELOG.rst  CMakeLists.txt  ament_cmake_archlint-extras.cmake  package.xml
ament_cmake_archlint/cmake/: ament_archlint.cmake  ament_cmake_archlint_lint_hook.cmake
ament_cmake_skilllint/: CHANGELOG.rst  CMakeLists.txt  ament_cmake_skilllint-extras.cmake  package.xml
ament_cmake_skilllint/cmake/: ament_cmake_skilllint_lint_hook.cmake  ament_skilllint.cmake
ament_skilllint/: CHANGELOG.rst  README.md  package.xml  setup.py
ament_skilllint/ament_skilllint/: main.py  pytest_marker.py  validate.py
ament_skilllint/schema/: skill.schema.json
ament_skilllint/test/: guide.json  test_skill_validation.py
models/: skill.schema.json
pal_arch_tools/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
pal_arch_tools/pal_arch_tools/: __init__.py  arch_list.py
pal_arch_tools/test/: test_skills.py
scripts/: validate.py
skills_tools/skills_tools/: skills_list.py
